CppUseSelectionsUpdater: Don't delete the watcher from its signal handler

Use std::unique_ptr instead, as QScopedPointer doesn't offer release().

Task-number: QTCREATORBUG-30401
Change-Id: If8f922fb52363a2e866cfacf770f617a00aa7fe5
Reviewed-by: <github-actions-qt-creator@cristianadam.eu>
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>