src/plugins/cppeditor/cppuseselectionsupdater.cpp
@@ -3,17 +3,15 @@
 
 #include "cppuseselectionsupdater.h"
 
-#include "cppeditorwidget.h"
 #include "cppeditordocument.h"
+#include "cppeditorwidget.h"
 #include "cppmodelmanager.h"
-#include "cpptoolsreuse.h"
 
+#include <utils/qtcassert.h>
 #include <utils/textutils.h>
 
 #include <QTextBlock>
 #include <QTextCursor>
-
-#include <utils/qtcassert.h>
 
 enum { updateUseSelectionsInternalInMs = 500 };
 
@@ -67,7 +65,7 @@ CppUseSelectionsUpdater::RunnerInfo CppUseSelectionsUpdater::update(CallType cal
             m_runnerWatcher->cancel();
 
         m_runnerWatcher.reset(new QFutureWatcher<CursorInfo>);
-        connect(m_runnerWatcher.data(), &QFutureWatcherBase::finished,
+        connect(m_runnerWatcher.get(), &QFutureWatcherBase::finished,
                 this, &CppUseSelectionsUpdater::onFindUsesFinished);
 
         m_runnerRevision = m_editorWidget->document()->revision();
@@ -142,7 +140,7 @@ void CppUseSelectionsUpdater::onFindUsesFinished()
 
     processResults(m_runnerWatcher->result());
 
-    m_runnerWatcher.reset();
+    m_runnerWatcher.release()->deleteLater();
 }
 
 CppUseSelectionsUpdater::ExtraSelections
